<resources>
    <string name="app_name">TapatApp_S</string>
    <string name="imageView_background">imageView_background</string>
    <string name="textView_childName">Nombre del niño/a</string>
    <string name="title_eyepatch_hours_remaining">Horas restantes para quitarle el parche:</string>
    <string name="default_hours_remaining">12 h</string>
    <string name="eyepatchbutton">eyepatchbutton</string>
    <string name="awakebutton">awakebutton</string>
    <string name="counter_type">Tipo de contador:</string>
    <string name="hours">Horas</string>
    <string name="percentage">Porcentaje</string>
    <string name="lower_case_hours">horas</string>
    <string name="percentage_symbol">%</string>
    <string name="hours_info">*Horas: Numero de horas al día que el niño/a debe llevar el parche puesto.</string>
    <string name="percentage_info">*Porcentaje: Cantidad de tiempo que el niño/a debe llevar el parche puesto, según el tiempo que esté despierto al día.</string>
    <string name="title_average_hours">Aproximandamente, ¿cuantas horas está despierto/a al dia?</string>
    <string name="create_child">Crear Perfil</string>
    <string name="title_average_hours_abreviation">Horas despierto al dia:</string>
    <string name="username">Username</string>
    <string name="email">Correo electronico:</string>
    <string name="example_email">example@email.com</string>
    <string name="change_email">Cambiar correo</string>
    <string name="change_email2">Cambiar\ncorreo</string>
    <string name="change_password">Cambiar contraseña</string>
    <string name="delete_account">Eliminar mi cuenta</string>
    <string name="go_back">Volver</string>
    <string name="tapat_app">TAPAT-APP</string>
    <string name="username_title">Nombre de usuario:</string>
    <string name="password_title">Contraseña:</string>
    <string name="login">Iniciar Sesión</string>
    <string name="register">Registrarse</string>
    <string name="password_2">Repetir contraseña:</string>
    <string name="welcome">Bienvenido a Tapatapp !</string>
    <string name="current_password">Contraseña actual:</string>
    <string name="new_email">Email nuevo:</string>
    <string name="new_password">Contraseña nueva:</string>
    <string name="ok">Aceptar</string>
    <string name="cancel">Cancelar</string>
    <string name="conectionErrorTitle">Error de conexion</string>
    <string name="conectionErrorMesasge">Intentelo de nuevo mas tarde</string>
</resources>
