<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/imageView_background"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="centerCrop"
        android:gravity="center"
        android:contentDescription="@string/imageView_background"
        app:srcCompat="@drawable/fishmosaic2" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="fitXY"
        android:gravity="center"
        android:orientation="vertical"
        android:paddingLeft="30dp"
        android:paddingRight="30dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/tapat_app"
            android:textAlignment="center"
            android:textColor="@android:color/background_dark"
            android:textSize="40sp"
            app:fontFamily="casual"
            android:textStyle="bold" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="25dp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:fontFamily="casual"
            android:text="@string/username_title"
            android:textAlignment="textStart"
            android:textColor="@android:color/background_dark"
            android:textSize="24sp"
            android:textStyle="bold"
            android:gravity="start" />

        <EditText
            android:id="@+id/editText_username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:drawable/editbox_background"
            android:ems="10"
            android:inputType="textPersonName|text"
            android:maxLength="20"
            android:textSize="24sp" />

        <TextView
            android:id="@+id/errorMessage_username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="start"
            android:textAlignment="textStart"
            android:textColor="@android:color/holo_red_dark"
            android:textSize="18sp"
            android:textStyle="bold"
            android:visibility="visible"
            app:fontFamily="casual" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:fontFamily="casual"
            android:text="@string/password_title"
            android:textAlignment="textStart"
            android:textColor="@android:color/background_dark"
            android:textSize="24sp"
            android:textStyle="bold"
            android:gravity="start" />

        <EditText
            android:id="@+id/editText_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:drawable/editbox_background"
            android:ems="10"
            android:inputType="textPassword"
            android:maxLength="20"
            android:textSize="24sp" />

        <TextView
            android:id="@+id/errorMessage_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="start"
            android:textAlignment="textStart"
            android:textColor="@android:color/holo_red_dark"
            android:textSize="18sp"
            android:textStyle="bold"
            android:visibility="visible"
            app:fontFamily="casual" />

        <Button
            android:id="@+id/button_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            app:backgroundTint="@android:color/holo_blue_light"
            app:fontFamily="casual"
            android:padding="20dp"
            android:text="@string/login"
            android:textColor="@android:color/white"
            android:textSize="24sp"
            android:textStyle="bold" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="25dp" />

        <Button
            android:id="@+id/button_register"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:padding="20dp"
            android:text="@string/register"
            android:textColor="@android:color/white"
            android:textSize="24sp"
            android:textStyle="bold"
            app:backgroundTint="@android:color/holo_blue_light"
            app:fontFamily="casual" />

    </LinearLayout>

</RelativeLayout>